--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="True">True</string>
+    <string name="False">False</string>
 </resources>
