Made ScoreActivity and reset button

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">Prueba Applicación</string>
     <string name="False">Falso</string>
     <string name="True">Cierto</string>
+    <string name="Reset">Reiniciar</string>
+    <string name="Score">Puntaje</string>
+
 </resources>
