Made the Correct and Incorrect toasts into @string so they can be translated

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,5 +5,7 @@
     <string name="True">Cierto</string>
     <string name="Reset">Reiniciar</string>
     <string name="Score">Puntaje</string>
+    <string name="Correct">Correcto</string>
+    <string name="Incorrect">Incorrecto</string>
 
 </resources>
